fix email cta spacing and accordion

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -523,7 +523,14 @@ a {
     gap: 30px;
   }
   .section-faq {
-    padding: 80px 0;
+    padding: 80px 0 20px 0;
+  }
+  .section-faq .accordion .acc-item {
+    padding: 20px;
+  }
+  .section-faq .accordion .acc-arrow {
+    height: 30px;
+    width: 30px;
   }
   .email-cta {
     padding: 20px;
