--- a/src/styles/queries/md-900px.sass
+++ b/src/styles/queries/md-900px.sass
@@ -48,7 +48,15 @@
       gap: 30px
 
   .section-faq
-    padding: 80px 0
+    padding: 80px 0 20px 0
+
+    .accordion
+      .acc-item 
+        padding: 20px
+
+      .acc-arrow 
+        height: 30px
+        width: 30px
 
   .email-cta
     padding: 20px  
